force-app/main/default/objects/ModuleResponse__c/ModuleResponse__c.object-meta.xml
<CustomObject>
    <label>ModuleResponse</label>
    <nameField>
        <label>ModuleResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ModulesResponse</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>