force-app/main/default/objects/ModuleResponse__c/fields/Completed_Units__c.field-meta.xml
<CustomField>
    <fullName>Completed_Units__c</fullName>
    <label>Completed Units</label>
    <summaryFilterItems>
        <field>UnitResponse__c.Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>UnitResponse__c.ModuleResponse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>