force-app/main/default/objects/ModuleResponse__c/fields/Module_Progress__c.field-meta.xml
<CustomField>
    <fullName>Module_Progress__c</fullName>
    <formula>Completed_Units__c  / Module__r.Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>