force-app/main/default/objects/ModuleResponse__c/fields/Points_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Points_Achieved__c</fullName>
    <label>Points Achieved</label>
    <summarizedField>UnitResponse__c.Points_Achieved__c</summarizedField>
    <summaryForeignKey>UnitResponse__c.ModuleResponse__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>